fixed table styling, removed confirmation route

--- a/routes/my-forms/my-forms.njk
+++ b/routes/my-forms/my-forms.njk
@@ -4,35 +4,35 @@
 
     <h1>{{ __('my-forms.title') }}</h1>
 
-    <table className="table-auto w-full">
+    <table class="table-auto w-full">
         <thead>
         <tr>
-        <th className="px-4 py-2">ID</th>
-            <th className="px-4 py-2">Name</th>
-            <th className="px-4 py-2">Email</th>
-            <th className="px-4 py-2">Redirect</th>
-            <th className="px-4 py-2">Confirmed</th>
-            <th className="px-4 py-2">Created at</th>
-            <th className="px-4 py-2">Delete</th>
+        <th class="px-4 py-2">ID</th>
+            <th class="px-4 py-2">Name</th>
+            <th class="px-4 py-2">Email</th>
+            <th class="px-4 py-2">Redirect</th>
+            <th class="px-4 py-2">Confirmed</th>
+            <th class="px-4 py-2">Created at</th>
+            <th class="px-4 py-2">Delete</th>
         </tr>
         </thead>
         <tbody>
         {% for form in forms %}
-            <tr className={index % 2 !== 0 ? "bg-gray-100" : ""} key={index}>
-                <td className="border px-4 py-2">{{form.id}}</td>
-                <td className="border px-4 py-2">{{form.name}}</td>
-                <td className="border px-4 py-2">{{form.email}}</td>
-                <td className="border px-4 py-2">{{form.redirect}}</td>
-                <td className="border px-4 py-2">
+            <tr>
+                <td class="border px-4 py-2">{{form.form_id}}</td>
+                <td class="border px-4 py-2">{{form.name}}</td>
+                <td class="border px-4 py-2">{{form.email}}</td>
+                <td class="border px-4 py-2">{{form.redirect}}</td>
+                <td class="border px-4 py-2">
                     {% if form.confirmed %}
                     Confirmed
                     {% else %}
                     Awaiting confirmation
                     {% endif %}
                 </td>
-                <td className="border px-4 py-2">{{form.created_at}}</td>
-                <td className="border px-4 py-2">
-                <button className="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">
+                <td class="border px-4 py-2">{{form.created_at}}</td>
+                <td class="border px-4 py-2">
+                <button class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">
                     Delete
                 </button>
                 </td>
