fixed bug with saving redirect url

--- a/routes/add-form/add-form.njk
+++ b/routes/add-form/add-form.njk
@@ -10,7 +10,7 @@
             
             {{ textInput('name', 'form.name.desc', {hint: 'form.name.hint', required: true}) }}
             {{ textInput('email', 'form.email.desc', {hint: 'form.email.hint', required: true}) }}
-            {{ textInput('redirect', 'form.redirect.desc', {hint: 'form.redirect.hint', required: true}) }}
+            {{ textInput('redirect_url', 'form.redirect.desc', {hint: 'form.redirect.hint', required: true}) }}
             {{ formButtons() }}
         </form>
     </div>
