--- a/routes/my-forms/my-forms.njk
+++ b/routes/my-forms/my-forms.njk
@@ -22,7 +22,7 @@
                 <td class="border px-4 py-2">{{form.form_id}}</td>
                 <td class="border px-4 py-2">{{form.name}}</td>
                 <td class="border px-4 py-2">{{form.email}}</td>
-                <td class="border px-4 py-2">{{form.redirect}}</td>
+                <td class="border px-4 py-2">{{form.redirect_url}}</td>
                 <td class="border px-4 py-2">
                     {% if form.confirmed %}
                     Confirmed
