working on validate page

--- a/routes/validate/validate.njk
+++ b/routes/validate/validate.njk
@@ -5,7 +5,7 @@
     <h1>{{ __('validate.title') }}</h1>
 
     <div>
-    <a href="/my-forms">My forms</a>
+    <a href="my-forms">My forms</a>
 
     </div>
 
