--- a/routes/personal/personal.njk
+++ b/routes/personal/personal.njk
@@ -7,22 +7,14 @@
     <div>
         <p>{{ __('personal.intro') }}</p>
     </div>
-    <form method="post">
+    <form method="post" action="http://localhost:3000/en/send?id=YOUR_FORM_ID">
         <input type="hidden" name="_csrf" value="{{ csrfToken }}">
 
-        {{ textInput('fullname', 'form.fullname', { class: "w-3-4", required: true }) }}
+        {{ textInput('fullname', 'form.fullname', { class: "w-3-4" }) }}
 
-        {{ textInput('email', 'form.email', { required: true }) }}
+        {{ textInput('email', 'form.email') }}
 
-        {{ textInput('expiry', 'form.expiry', { hint: 'form.expiry.desc', required: true }) }}
-
-        {{ textArea('address', 'form.address', { hint: 'form.address.desc'}) }}
-
-        {{ fileInput('form.upload', null, {name: "myfile", id: "myfile"} ) }}
-
-        {{ radioButtons('send_notifications', { '1':'Yes','2':'No'}, data.send_notifications, 'form.send_notifications', errors, {hint: 'form.send_notifications.desc'}, { required: true }) }}
-
-        {{ checkBoxes('notify_type', {'1':'SMS','2':'Email'}, data.notify_type, 'form.notify_by', errors, {hint: 'form.notify_by.desc'} ) }}
+        {{ textInput('expiry', 'form.expiry', { hint: 'form.expiry.desc' }) }}
 
         {{ formButtons() }}
     </form>
