hopefully fixed the post response headers, started on login page

--- a/routes/my-forms/my-forms.njk
+++ b/routes/my-forms/my-forms.njk
@@ -3,7 +3,7 @@
 {% block content %}
 
     <h1>{{ __('my-forms.title') }}</h1>
-
+    <a href="add-form">Add a form</a>
     <table class="table-auto w-full">
         <thead>
         <tr>
