--- a/routes/my-forms/my-forms.njk
+++ b/routes/my-forms/my-forms.njk
@@ -30,7 +30,7 @@
                     Awaiting confirmation
                     {% endif %}
                 </td>
-                <td class="border px-4 py-2">{{form.created_at}}</td>
+                <td class="border px-4 py-2 date">{{form.created_at}}</td>
                 <td class="border px-4 py-2">
                 <button class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">
                     Delete
