--- a/routes/login/login.njk
+++ b/routes/login/login.njk
@@ -2,19 +2,11 @@
 
 {% block content %}
 
-    <h1>{{ __('login.title') }}</h1>
-
     <div>
-        <p>
-            {{ __('login.intro') }}
-        </p>
-
-        <form method="post">
-            <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-            
-            {{ textInput('form.firstname', 'form.firstname.desc') }}
-            {{ formButtons() }}
-        </form>
+        <a class="button-link" href="/auth/google" role="button" draggable="false">
+            {{ __('login') }}
+            <span aria-hidden="true">→</span>
+        </a>
     </div>
 
 {% endblock %}
