--- a/routes/my-forms/my-forms.njk
+++ b/routes/my-forms/my-forms.njk
@@ -1,6 +1,7 @@
 {% extends "base.njk" %}
 
 {% block content %}
+    <a href="/logout">Logout</a>
 
     <h1>{{ __('my-forms.title') }}</h1>
     <a href="add-form">Add a form</a>
