--- a/views/base.njk
+++ b/views/base.njk
@@ -5,6 +5,7 @@
 {%- from 'checkboxes.njk' import checkBoxes as checkBoxes with context -%}
 {%- from 'buttons.njk' import formButtons as formButtons with context -%}
 {%- from 'input-file.njk' import fileInput as fileInput with context -%}
+{%- from 'listForm.njk' import listForm as listForm with context -%}
 
 <!DOCTYPE html>
 <html lang="{{ getLocale() }}">
