--- a/routes/login/login.njk
+++ b/routes/login/login.njk
@@ -1,7 +1,8 @@
 {% extends "base.njk" %}
 
 {% block content %}
-
+    <h1>{{ __('login.title') }}</h1>
+    
     <div>
         <a class="button-link" href="/auth/google" role="button" draggable="false">
             {{ __('login') }}
