--- a/views/macros/listForm.njk
+++ b/views/macros/listForm.njk
@@ -2,7 +2,7 @@
     <!-- start list item -->
     <div class="list-item">
         <h2 class="my-1 text-blue">{{form.name}}</h2>
-        <div class="location my-0 text-lg text-gray-800">
+        <div class="my-0 text-lg text-gray-800">
             <div><span class="font-bold">Form ID: </span>{{form.form_id}}</div>
             <div><span class="font-bold">Email:</span> {{form.email}}</div>
             <div><span class="font-bold">Redirect URL:</span> {{form.redirect_url}}</div>
@@ -14,9 +14,7 @@
                 {% endif %}
             </div>
             <div><span class="font-bold">Created at:</span> <span class="date">{{form.created_at}}</span></div>
-            <button class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">
-                Delete
-            </button>
+            <a href="delete-form?form_id={{form.form_id}}">Delete form</a>
         </div>
         <hr class="list-item-line my-6" />
     </div>
