added some dev instructions

--- a/routes/my-forms/my-forms.njk
+++ b/routes/my-forms/my-forms.njk
@@ -8,10 +8,14 @@
     </div>
 
     <h1>{{ __('my-forms.title') }}</h1>
-
     {% for form in forms %}
         {{listForm(form) }}
     {% endfor %}
-
-
+    <h2>Code examples</h2>
+    <p>
+        To use a form that includes a redirect, set the action attribute to the following endpoint: "https://generic-form-sender.herokuapp.com/en/send?id=YOUR_FORM_ID".
+    </p>
+    <p>
+        For a form without a redirect, make an AJAX request using client side javascript to the same endpoint.
+    </p>
 {% endblock %}
