--- a/views/base.njk
+++ b/views/base.njk
@@ -13,7 +13,7 @@
         <!-- Required meta tags-->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="[ALPHA] Form Sender">
+        <meta name="description" content="[ALPHA] Feedback Collector">
         <meta name="csrf-token" content="{{ csrfToken }}">
         <link rel="shortcut icon" href="/favicon.png" type="image/x-icon" sizes="32x32">
         <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
