changed url and repo name to feedback collector

--- a/routes/my-forms/my-forms.njk
+++ b/routes/my-forms/my-forms.njk
@@ -13,7 +13,7 @@
     {% endfor %}
     <h2>Code examples</h2>
     <p>
-        To use a form that includes a redirect, set the action attribute to the following endpoint: "https://generic-form-sender.herokuapp.com/en/send?id=YOUR_FORM_ID".
+        To use a form that includes a redirect, set the action attribute to the following endpoint: "https://cds-feedback-collector.herokuapp.com/en/send?id=YOUR_FORM_ID".
     </p>
     <p>
         For a form without a redirect, make an AJAX request using client side javascript to the same endpoint.
