--- a/views/macros/listForm.njk
+++ b/views/macros/listForm.njk
@@ -1,5 +1,4 @@
 {% macro listForm(form) %}
-    <!-- start list item -->
     <div class="list-item">
         <h2 class="my-1 text-blue">{{form.name}}</h2>
         <div class="my-0 text-lg text-gray-800">
@@ -24,10 +23,20 @@
                 {% endif %}
             </div>
             <div><span class="font-bold">Created at:</span> <span class="date">{{form.created_at}}</span></div>
-            <div><a href="delete-form?form_id={{form.form_id}}">Delete form</a></div>
             <div><a href="download-responses?form_id={{form.form_id}}" download>Download responses</a></div>
+            <div><button onclick="deleteForm('{{form.form_id}}')" class="bg-red-500 hover:bg-red-700 text-white font-bold py-1 px-2 rounded">Delete form</button>
         </div>
         <hr class="list-item-line my-6" />
     </div>
-    <!-- end list item -->
+
+    <script>
+        const deleteForm = (formId) => {
+            if (window.confirm('Are you sure you want to delete this form?')) {
+                window.open(`delete-form?form_id=${formId}`, "_self");
+            } else {
+                // Do nothing!
+            }
+        }
+    </script>
+
 {% endmacro %}
