--- a/views/macros/listForm.njk
+++ b/views/macros/listForm.njk
@@ -24,14 +24,14 @@
             </div>
             <div><span class="font-bold">Created at:</span> <span class="date">{{form.created_at}}</span></div>
             <div><a href="download-responses?form_id={{form.form_id}}" download>Download responses</a></div>
-            <div><button onclick="deleteForm('{{form.form_id}}')" class="bg-red-500 hover:bg-red-700 text-white font-bold py-1 px-2 rounded">Delete form</button>
+            <div><button onclick="deleteForm('{{form.form_id}}', '{{form.name}}')" class="bg-red-500 hover:bg-red-700 text-white font-bold py-1 px-2 rounded">Delete form</button>
         </div>
         <hr class="list-item-line my-6" />
     </div>
 
     <script>
-        const deleteForm = (formId) => {
-            if (window.confirm('Are you sure you want to delete this form?')) {
+        const deleteForm = (formId, formName) => {
+            if (window.confirm(`Delete "${formName}" form?`)) {
                 window.open(`delete-form?form_id=${formId}`, "_self");
             } else {
                 // Do nothing!
